--- a/QuantumultX/Sample/Sample_DlerCloud.conf
+++ b/QuantumultX/Sample/Sample_DlerCloud.conf
@@ -1,6 +1,6 @@
 # 该文件基于 Quantumult X 1.0.4 正式版制作，只适用于 Dler Cloud
 #
-# 2020年01月08日 19:34 UTC/GMT +8
+# 2020年01月08日 20:08 UTC/GMT +8
 #
 # Quantumult 使用 HTTP HEAD 方法对测试网址（server_check_url）进行网页响应性测试（测试结果为通过该节点访问此网页获得响应所需要的时间），来确认节点的可用性。
 # Quantumult 界面中的延迟测试方式均为网页响应性测试，显示的最终延迟均为通过对应节点访问测试网页获得响应所需要时间。
@@ -45,7 +45,7 @@ static=Microsoft, direct, Outside, img-url=https://raw.githubusercontent.com/GeQ
 static=PayPal, Outside, direct, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/PayPal.png
 static=Outside, Hong Kong, Taiwan, Singapore, Japan, Korea, United States, Other, direct, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/Outside.png
 static=Mainland, direct, China, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/Mainland.png
-static=Speedtest, direct, China, Hong Kong, Taiwan, Singapore, Japan, Korea, United States, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/Speedtest.png
+static=Speedtest, direct, China, Hong Kong, Taiwan, Singapore, Japan, Korea, United States, Other, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/Speedtest.png
 static=Others, Outside, direct, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/Others.png
 
 # static 策略是静态策略，需要手动选择节点
