--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -1,6 +1,6 @@
 # 该文件基于 Quantumult X 1.0.5 正式版制作。
 #
-# 2020年01月24日 20:40 UTC/GMT +8
+# 2020年01月24日 21:07 UTC/GMT +8
 #
 # Quantumult 使用 HTTP HEAD 方法对测试网址（server_check_url）进行网页响应性测试（测试结果为通过该节点访问此网页获得响应所需要的时间），来确认节点的可用性。
 # Quantumult 界面中的延迟测试方式均为网页响应性测试，显示的最终延迟均为通过对应节点访问测试网页获得响应所需要时间。
@@ -34,7 +34,7 @@ server=223.5.5.5
 [policy]
 # 请自行在策略组添加需要加入的节点，亦可直接通过选择自带 PROXY 策略节点使用
 # 其中 CMedia 策略组为中国媒体，GMedia 为国际媒体，Outside 为境外链接，Mainland 为大陆链接，Others 为最终规则
-# 默认注释网易云音乐（包含在 CMedia 内）、Netflix 和 YouTube（包含在 GMedia 内）、Telegram 和 PayPal（包含在 Outside 内）、微软（包含在 Mainland 内）策略组，如需使用请取消 ; 注释 注
+# 默认注释网易云音乐（包含在 CMedia 内）、Netflix 和 YouTube（包含在 GMedia 内）、Telegram 和 PayPal（包含在 Outside 内）、微软（包含在 Mainland 内）策略组，如需使用请取消 ; 注释
 static=AdBlock, reject, direct, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/AdBlock.png
 static=Apple, direct, Outside, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/Apple.png
 static=CMedia, direct, proxy, img-url=https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/IconSet/CMedia.png
@@ -63,7 +63,7 @@ static=Others, Outside, direct, img-url=https://raw.githubusercontent.com/GeQ1an
 
 
 [filter_remote]
-# 默认注释网易云音乐（包含在 CMedia 内）、Netflix 和 YouTube（包含在 GMedia 内）、Telegram 和 PayPal（包含在 Outside 内）、微软（包含在 Mainland 内）策略组，如需使用请取消 ; 注释 注释
+# 默认注释网易云音乐（包含在 CMedia 内）、Netflix 和 YouTube（包含在 GMedia 内）、Telegram 和 PayPal（包含在 Outside 内）、微软（包含在 Mainland 内）策略组，如需使用请取消 ; 注释
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/AdBlock.list, tag=AdBlock (Stick Rules), enabled=true
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Apple.list, tag=Apple (Stick Rules), enabled=true
 ;https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Netease%20Music.list, tag=Netease Music (Stick Rules), enabled=true
