--- a/Quantumult_media_only.conf
+++ b/Quantumult_media_only.conf
@@ -1,4 +1,4 @@
-# 2019年09月08日 03:07 UTC/GMT +9
+# 2020年03月01日 20:00 UTC/GMT +8
 
 #「设置」——「订阅」——「+」——「分流」，输入名字（随意，如"Stick Rules"）
 # 填上链接地址，勾选个性化保存，保存找到选项，左滑选择「替换」，然后「保存」
@@ -308,6 +308,17 @@ HOST-SUFFIX,wa.gtimg.com,REJECT
 HOST-SUFFIX,bfshan.cn,REJECT
 
 # REJECT
+# > Umeng
+HOST,alog.umeng.co,REJECT
+HOST,alog.umeng.com,REJECT
+HOST,alogs.umeng.com,REJECT
+HOST,alog.umengcloud.com,REJECT
+HOST,alogs.umengcloud.com,REJECT
+HOST,ar.umeng.com,REJECT
+HOST,plbslog.umeng.com,REJECT
+HOST,ulogs.umeng.com,REJECT
+HOST,ulogs.umengcloud.com,REJECT
+
 # > Client
 HOST-KEYWORD,admaster,REJECT
 HOST-KEYWORD,admdfs,REJECT
@@ -333,7 +344,6 @@ HOST-KEYWORD,domob,REJECT
 HOST-KEYWORD,duomeng,REJECT
 HOST-KEYWORD,dwtrack,REJECT
 HOST-KEYWORD,fenxi,REJECT
-HOST-KEYWORD,googleads,REJECT
 HOST-KEYWORD,guanggao,REJECT
 HOST-KEYWORD,inmobi,REJECT
 HOST-KEYWORD,lianmeng,REJECT
@@ -968,7 +978,6 @@ HOST-SUFFIX,ad.beihai365.com,REJECT
 HOST-SUFFIX,ad.bitmedia.io,REJECT
 HOST-SUFFIX,ad.bjmama.net,REJECT
 HOST-SUFFIX,ad.cacafly.com,REJECT
-HOST-SUFFIX,ad.caiyunapp.com,REJECT
 HOST-SUFFIX,ad.cctv.com,REJECT
 HOST-SUFFIX,ad.cooks.com,REJECT
 HOST-SUFFIX,ad.crichd.in,REJECT
@@ -1518,7 +1527,6 @@ HOST-SUFFIX,am.szhome.com,REJECT
 HOST-SUFFIX,am.zdnet.com.cn,REJECT
 HOST-SUFFIX,am15.net,REJECT
 HOST-SUFFIX,amazingmagics.com,REJECT
-HOST-SUFFIX,amdc.m.taobao.com,REJECT
 HOST-SUFFIX,amfi.gou.sogou.com,REJECT
 HOST-SUFFIX,amiok.org,REJECT
 HOST-SUFFIX,amps.yoyi.com.cn,REJECT
@@ -1531,6 +1539,7 @@ HOST-SUFFIX,an.wikigifth.com,REJECT
 HOST-SUFFIX,an.yandex.ru,REJECT
 HOST-SUFFIX,ana.tatahn.com,REJECT
 HOST-SUFFIX,analy.qq.com,REJECT
+HOST-SUFFIX,analytics-api.smzdm.com,REJECT
 HOST-SUFFIX,andmejs.com,REJECT
 HOST-SUFFIX,android.push.126.net,REJECT
 HOST-SUFFIX,android.rqd.qq.com,REJECT
@@ -1599,7 +1608,6 @@ HOST-SUFFIX,api.push.daoyoudao.com,REJECT
 HOST-SUFFIX,api.ra2.xlmc.sec.miui.com,REJECT
 HOST-SUFFIX,api.rees46.com,REJECT
 HOST-SUFFIX,api.rideraid.net,REJECT
-HOST-SUFFIX,api.sec.miui.com,REJECT
 HOST-SUFFIX,api.share.mob.com,REJECT
 HOST-SUFFIX,api.shuzilm.cn,REJECT
 HOST-SUFFIX,api.similarweb.com,REJECT
@@ -1875,7 +1883,6 @@ HOST-SUFFIX,bbdm.051661.com,REJECT
 HOST-SUFFIX,bbsimages.zkxf119.com,REJECT
 HOST-SUFFIX,bc.geocities.yahoo.co.jp,REJECT
 HOST-SUFFIX,bccyyc.com,REJECT
-HOST-SUFFIX,bce.baidu.com,REJECT
 HOST-SUFFIX,bcjjg.bugsevent.com,REJECT
 HOST-SUFFIX,bcjxf.bugsevent.com,REJECT
 HOST-SUFFIX,bd.ershenghuo.com,REJECT
@@ -2032,7 +2039,6 @@ HOST-SUFFIX,breeze.olclient.baofeng.com,REJECT
 HOST-SUFFIX,breezily168.com,REJECT
 HOST-SUFFIX,brizads.com,REJECT
 HOST-SUFFIX,bro.flyme.cn,REJECT
-HOST-SUFFIX,browser.gwdang.com,REJECT
 HOST-SUFFIX,bryonypie.com,REJECT
 HOST-SUFFIX,bs.5442.com,REJECT
 HOST-SUFFIX,bs.serving-sys.com,REJECT
@@ -2425,7 +2431,6 @@ HOST-SUFFIX,cm.baidu.com,REJECT
 HOST-SUFFIX,cm.bilibili.com,REJECT
 HOST-SUFFIX,cm.ctnsnet.com,REJECT
 HOST-SUFFIX,cm.eyereturn.com,REJECT
-HOST-SUFFIX,cm.jd.com,REJECT
 HOST-SUFFIX,cm.mct01.com,REJECT
 HOST-SUFFIX,cm.netseer.com,REJECT
 HOST-SUFFIX,cm.p4p.cn.yahoo.com,REJECT
@@ -2450,7 +2455,6 @@ HOST-SUFFIX,cncy8.com,REJECT
 HOST-SUFFIX,cndjs-1251973891.coshk.myqcloud.com,REJECT
 HOST-SUFFIX,cnetdirectintl.com,REJECT
 HOST-SUFFIX,cnetwidget.creativemark.co.uk,REJECT
-HOST-SUFFIX,c-nfa.jd.com,REJECT
 HOST-SUFFIX,cnfanglei.com,REJECT
 HOST-SUFFIX,cnhbxx.com,REJECT
 HOST-SUFFIX,cnkok.com,REJECT
@@ -2470,7 +2474,6 @@ HOST-SUFFIX,co.dtech.baofeng.com,REJECT
 HOST-SUFFIX,cocounion.com,REJECT
 HOST-SUFFIX,cod.southmoney.com,REJECT
 HOST-SUFFIX,code.3shangyou.com,REJECT
-HOST-SUFFIX,code.createjs.com,REJECT
 HOST-SUFFIX,code.fastclick.net,REJECT
 HOST-SUFFIX,code.hajuwang.cn,REJECT
 HOST-SUFFIX,code.hot-mob.com,REJECT
@@ -3076,7 +3079,6 @@ HOST-SUFFIX,dt.adsafeprotected.com,REJECT
 HOST-SUFFIX,d-track.send.microad-cn.com,REJECT
 HOST-SUFFIX,dtrk.slimcdn.com,REJECT
 HOST-SUFFIX,dts.akamai.startappexchange.com,REJECT
-HOST-SUFFIX,du.jd.com,REJECT
 HOST-SUFFIX,duanat.com,REJECT
 HOST-SUFFIX,duapp.com,REJECT
 HOST-SUFFIX,duapps.com,REJECT
@@ -3491,7 +3493,6 @@ HOST-SUFFIX,fancyapi.com,REJECT
 HOST-SUFFIX,fanqianbb.com,REJECT
 HOST-SUFFIX,fans.bestvogue.com,REJECT
 HOST-SUFFIX,fansi365.com,REJECT
-HOST-SUFFIX,fanxing.kugou.com,REJECT
 HOST-SUFFIX,fan-yong.com,REJECT
 HOST-SUFFIX,farm-cn.plista.com,REJECT
 HOST-SUFFIX,fastable.com,REJECT
@@ -3793,7 +3794,6 @@ HOST-SUFFIX,gload.adhood.com,REJECT
 HOST-SUFFIX,global.msads.net,REJECT
 HOST-SUFFIX,global.ymtracking.com,REJECT
 HOST-SUFFIX,gm682.com,REJECT
-HOST-SUFFIX,gma.alicdn.com,REJECT
 HOST-SUFFIX,gma1.com,REJECT
 HOST-SUFFIX,gmota.g188.net,REJECT
 HOST-SUFFIX,gmtdmp.mookie1.com,REJECT
@@ -4261,7 +4261,6 @@ HOST-SUFFIX,imgg.marketgid.com,REJECT
 HOST-SUFFIX,imgg.mgid.com,REJECT
 HOST-SUFFIX,imgp.cymzc.com,REJECT
 HOST-SUFFIX,imgsreview.dftoutiao.com,REJECT
-HOST-SUFFIX,img-x.jd.com,REJECT
 HOST-SUFFIX,imindmap.cc,REJECT
 HOST-SUFFIX,immob.cn,REJECT
 HOST-SUFFIX,imneinei.com,REJECT
@@ -4683,7 +4682,6 @@ HOST-SUFFIX,jystea.com,REJECT
 HOST-SUFFIX,jyz.fjtzjy.com,REJECT
 HOST-SUFFIX,jzkapp.com,REJECT
 HOST-SUFFIX,jzm81.com,REJECT
-HOST-SUFFIX,jzt.jd.com,REJECT
 HOST-SUFFIX,k.85wa.cn,REJECT
 HOST-SUFFIX,k.ctsywy.com,REJECT
 HOST-SUFFIX,k1w5.me,REJECT
@@ -4817,7 +4815,6 @@ HOST-SUFFIX,laoqu123.com,REJECT
 HOST-SUFFIX,lashou1000.com,REJECT
 HOST-SUFFIX,lb.gtimg.com,REJECT
 HOST-SUFFIX,lb.statsevent.com,REJECT
-HOST-SUFFIX,lbs.map.qq.com,REJECT
 HOST-SUFFIX,lbstatic-a.akamaihd.net,REJECT
 HOST-SUFFIX,lbszb.tongbu.com,REJECT
 HOST-SUFFIX,lc.jiathis.com,REJECT
@@ -5722,6 +5719,7 @@ HOST-SUFFIX,nexus.ensighten.com,REJECT
 HOST-SUFFIX,nfh.cnshef.com,REJECT
 HOST-SUFFIX,ngads.go.com,REJECT
 HOST-SUFFIX,nicelabel.cc,REJECT
+HOST-SUFFIX,nim.qiyukf.com,REJECT
 HOST-SUFFIX,ninebox.cn,REJECT
 HOST-SUFFIX,ninemsn.imrworldwide.com,REJECT
 HOST-SUFFIX,niurenw.com,REJECT
@@ -5992,7 +5990,6 @@ HOST-SUFFIX,pcmzn.com,REJECT
 HOST-SUFFIX,pcsoftwords.dftoutiao.com,REJECT
 HOST-SUFFIX,pcxzo.pluto.sogou.com,REJECT
 HOST-SUFFIX,pd7-imp.revsci.net,REJECT
-HOST-SUFFIX,pdc.micloud.xiaomi.net,REJECT
 HOST-SUFFIX,pdfexpert.cc,REJECT
 HOST-SUFFIX,pdl.gionee.com,REJECT
 HOST-SUFFIX,pdsjycm.com,REJECT
@@ -6469,7 +6466,6 @@ HOST-SUFFIX,rotabanner.kulichki.net,REJECT
 HOST-SUFFIX,rotate.ymtracking.com,REJECT
 HOST-SUFFIX,rotator.tradetracker.net,REJECT
 HOST-SUFFIX,router.bittorrent.com,REJECT
-HOST-SUFFIX,router.gwdang.com,REJECT
 HOST-SUFFIX,rovio-news-app.angrybirdsgame.com,REJECT
 HOST-SUFFIX,rp.crasheye.cn,REJECT
 HOST-SUFFIX,rp.gwallet.com,REJECT
@@ -7496,7 +7492,6 @@ HOST-SUFFIX,update.sdk.jiguang.cn,REJECT
 HOST-SUFFIX,updatecenter.qq.com,REJECT
 HOST-SUFFIX,updatepage.kuwo.cn,REJECT
 HOST-SUFFIX,updates-s3.binaryage.com,REJECT
-HOST-SUFFIX,up-hl.3g.qq.com,REJECT
 HOST-SUFFIX,uplze.code.weddingeeos.com,REJECT
 HOST-SUFFIX,ups.ksmobile.net,REJECT
 HOST-SUFFIX,upush.res.meizu.com,REJECT
@@ -8518,13 +8513,13 @@ DOMAIN-SUFFIX,paypal.com,选择PayPal的策略，不懂就选择DIRECT
 
 # > Netflix
 USER-AGENT,Argo*,选择Netflix的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,netflix.com,选择Netflix的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,netflix.net,选择Netflix的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,nflxso.net,选择Netflix的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,nflxext.com,选择Netflix的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,nflximg.com,选择Netflix的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,nflximg.net,选择Netflix的策略，不懂就选择DIRECT
-DOMAIN-SUFFIX,nflxvideo.net,选择Netflix的策略，不懂就选择DIRECT
+HOST-SUFFIX,netflix.com,选择Netflix的策略，不懂就选择DIRECT
+HOST-SUFFIX,netflix.net,选择Netflix的策略，不懂就选择DIRECT
+HOST-SUFFIX,nflxext.com,选择Netflix的策略，不懂就选择DIRECT
+HOST-SUFFIX,nflximg.com,选择Netflix的策略，不懂就选择DIRECT
+HOST-SUFFIX,nflximg.net,选择Netflix的策略，不懂就选择DIRECT
+HOST-SUFFIX,nflxso.net,选择Netflix的策略，不懂就选择DIRECT
+HOST-SUFFIX,nflxvideo.net,选择Netflix的策略，不懂就选择DIRECT
 IP-CIDR,23.246.0.0/18,选择Netflix的策略，不懂就选择DIRECT,no-resolve
 IP-CIDR,37.77.184.0/21,选择Netflix的策略，不懂就选择DIRECT,no-resolve
 IP-CIDR,45.57.0.0/17,选择Netflix的策略，不懂就选择DIRECT,no-resolve
@@ -9538,7 +9533,7 @@ USER-AGENT,SpeedTest*,PROXY
 HOST-KEYWORD,speedtest,PROXY
 HOST-SUFFIX,ooklaserver.net,PROXY
 
-# > UA
+# UA
 USER-AGENT,hide*,DIRECT
 USER-AGENT,MicroMessenger*,DIRECT
 USER-AGENT,TeamViewer*,DIRECT
@@ -9547,6 +9542,40 @@ USER-AGENT,ting_en,DIRECT
 USER-AGENT,WebTorrent*,DIRECT
 USER-AGENT,WeChat*,DIRECT
 
+# China Bank
+# > Agricultural Bank of China
+HOST-SUFFIX,abchina.com,DIRECT
+
+# > Bank of China
+HOST-SUFFIX,boc.cn,DIRECT
+
+# > China Citic Bank
+HOST-SUFFIX,citicbank.com,DIRECT
+HOST-SUFFIX,ecitic.com,DIRECT
+
+# > China Construction Bank
+HOST-SUFFIX,ccb.com,DIRECT
+HOST-SUFFIX,ccb.com.cn,DIRECT
+
+# > China Everbright Bank
+HOST-SUFFIX,cebbank.com,DIRECT
+
+# > China Merchants Bank
+USER-AGENT,cmb*,DIRECT
+HOST-SUFFIX,cmbchina.com,DIRECT
+HOST-SUFFIX,cmbimg,DIRECT
+HOST-SUFFIX,cmbt.cn,DIRECT
+HOST-SUFFIX,mbcloud.com,DIRECT
+
+# > Industrial and Commercial Bank of China
+USER-AGENT,%E4%B8%AD%E5%9B%BD%E5%B7%A5%E5%95%86%E9%93%B6%E8%A1%8C*,DIRECT
+HOST-SUFFIX,icbc.com.cn,DIRECT
+
+# > Ping An Bank
+HOST-SUFFIX,pingan.com,DIRECT
+HOST-SUFFIX,pingan.com.cn,DIRECT
+
+# Type
 # > Beplay
 HOST-KEYWORD,beplay,DIRECT
 
@@ -9554,6 +9583,33 @@ HOST-KEYWORD,beplay,DIRECT
 HOST-SUFFIX,battle.net,DIRECT
 HOST-SUFFIX,battlenet.com,DIRECT
 HOST-SUFFIX,blizzard.com,DIRECT
+
+# > Microsoft
+USER-AGENT,Microsoft*,DIRECT
+HOST-KEYWORD,microsoft,DIRECT
+HOST-SUFFIX,ms,DIRECT
+HOST-SUFFIX,bing.com,DIRECT
+HOST-SUFFIX,bing.net,DIRECT
+HOST-SUFFIX,hotmail.com,DIRECT
+HOST-SUFFIX,live.com,DIRECT
+HOST-SUFFIX,live.net,DIRECT
+HOST-SUFFIX,microsofttranslator.com,DIRECT
+HOST-SUFFIX,msauth.net,DIRECT
+HOST-SUFFIX,msecnd.net,DIRECT
+HOST-SUFFIX,msocdn.com,DIRECT
+HOST-SUFFIX,msedge.net,DIRECT
+HOST-SUFFIX,msn.com,DIRECT
+HOST-SUFFIX,office.com,DIRECT
+HOST-SUFFIX,office.net,DIRECT
+HOST-SUFFIX,office365.com,DIRECT
+HOST-SUFFIX,onenote.com,DIRECT
+HOST-SUFFIX,onenote.net,DIRECT
+HOST-SUFFIX,outlook.com,DIRECT
+HOST-SUFFIX,visualstudio.com,DIRECT
+HOST-SUFFIX,windows.com,DIRECT
+HOST-SUFFIX,windows.net,DIRECT
+HOST-SUFFIX,xbox.com,DIRECT
+HOST-SUFFIX,xboxlive.com,DIRECT
 
 # > Prior
 HOST,client.amplifi.com,DIRECT
@@ -9588,8 +9644,10 @@ HOST-SUFFIX,abercrombie.com,DIRECT
 HOST-SUFFIX,adobesc.com,DIRECT
 HOST-SUFFIX,air-matters.com,DIRECT
 HOST-SUFFIX,air-matters.io,DIRECT
+HOST-SUFFIX,airhotels.cn,DIRECT
 HOST-SUFFIX,akadns.net,DIRECT
 HOST-SUFFIX,aliapp.org,DIRECT
+HOST-SUFFIX,alibabacloud.com,DIRECT
 HOST-SUFFIX,alicdn.com,DIRECT
 HOST-SUFFIX,alipay.com,DIRECT
 HOST-SUFFIX,alipayobjects.com,DIRECT
@@ -9597,22 +9655,20 @@ HOST-SUFFIX,aliyun.com,DIRECT
 HOST-SUFFIX,amap.com,DIRECT
 HOST-SUFFIX,apache.org,DIRECT
 HOST-SUFFIX,api.crisp.chat,DIRECT
-HOST-SUFFIX,api.termius.com,DIRECT
 HOST-SUFFIX,appshike.com,DIRECT
 HOST-SUFFIX,autohome.com.cn,DIRECT
 HOST-SUFFIX,autonavi.com,DIRECT
 HOST-SUFFIX,aweme.snssdk.com,DIRECT
 HOST-SUFFIX,bababian.com,DIRECT
 HOST-SUFFIX,baidu.com,DIRECT
-HOST-SUFFIX,battle.net,DIRECT
 HOST-SUFFIX,bdimg.com,DIRECT
 HOST-SUFFIX,bdstatic.com,DIRECT
 HOST-SUFFIX,beatsbydre.com,DIRECT
 HOST-SUFFIX,bet365.com,DIRECT
 HOST-SUFFIX,bitauto.com,DIRECT
 HOST-SUFFIX,broadcasthe.net,DIRECT
+HOST-SUFFIX,bthhotels.com,DIRECT
 HOST-SUFFIX,caiyunapp.com,DIRECT
-HOST-SUFFIX,ccb.com,DIRECT
 HOST-SUFFIX,ccgslb.com,DIRECT
 HOST-SUFFIX,ccgslb.net,DIRECT
 HOST-SUFFIX,chinacache.net,DIRECT
@@ -9650,7 +9706,6 @@ HOST-SUFFIX,eudic.net,DIRECT
 HOST-SUFFIX,ewqcxz.com,DIRECT
 HOST-SUFFIX,feng.com,DIRECT
 HOST-SUFFIX,fir.im,DIRECT
-HOST-SUFFIX,firefox.com,DIRECT
 HOST-SUFFIX,frdic.com,DIRECT
 HOST-SUFFIX,fresh-ideas.cc,DIRECT
 HOST-SUFFIX,geetest.com,DIRECT
@@ -9664,6 +9719,7 @@ HOST-SUFFIX,hdchina.org,DIRECT
 HOST-SUFFIX,hdcmct.org,DIRECT
 HOST-SUFFIX,hiwifi.com,DIRECT
 HOST-SUFFIX,hollisterco.com,DIRECT
+HOST-SUFFIX,homeinns.com,DIRECT
 HOST-SUFFIX,hongxiu.com,DIRECT
 HOST-SUFFIX,hxcdn.net,DIRECT
 HOST-SUFFIX,ibeta.me,DIRECT
@@ -9700,6 +9756,7 @@ HOST-SUFFIX,lxdns.com,DIRECT
 HOST-SUFFIX,mai.tn,DIRECT
 HOST-SUFFIX,meizu.com,DIRECT
 HOST-SUFFIX,mi.com,DIRECT
+HOST-SUFFIX,mi-img.com,DIRECT
 HOST-SUFFIX,miaopai.com,DIRECT
 HOST-SUFFIX,miui.com,DIRECT
 HOST-SUFFIX,miwifi.com,DIRECT
@@ -9712,7 +9769,6 @@ HOST-SUFFIX,myunlu.com,DIRECT
 HOST-SUFFIX,ngabbs.com,DIRECT
 HOST-SUFFIX,netease.com,DIRECT
 HOST-SUFFIX,nfoservers.com,DIRECT
-HOST-SUFFIX,nssurge.com,DIRECT
 HOST-SUFFIX,nuomi.com,DIRECT
 HOST-SUFFIX,ourbits.club,DIRECT
 HOST-SUFFIX,ourdvs.com,DIRECT
@@ -9721,6 +9777,7 @@ HOST-SUFFIX,pgyer.com,DIRECT
 HOST-SUFFIX,pniao.com,DIRECT
 HOST-SUFFIX,privatehd.to,DIRECT
 HOST-SUFFIX,pstatp.com,DIRECT
+HOST-SUFFIX,pt.m-team.cc,DIRECT
 HOST-SUFFIX,qbox.me,DIRECT
 HOST-SUFFIX,qcloud.com,DIRECT
 HOST-SUFFIX,qdaily.com,DIRECT
@@ -9762,21 +9819,22 @@ HOST-SUFFIX,startssl.com,DIRECT
 HOST-SUFFIX,store.steampowered.com,DIRECT
 HOST-SUFFIX,suning.com,DIRECT
 HOST-SUFFIX,symcd.com,DIRECT
+HOST-SUFFIX,t.tt,DIRECT
 HOST-SUFFIX,taobao.com,DIRECT
 HOST-SUFFIX,teamviewer.com,DIRECT
 HOST-SUFFIX,tencent.com,DIRECT
 HOST-SUFFIX,tenpay.com,DIRECT
+HOST-SUFFIX,tianyancha.com,DIRECT
 HOST-SUFFIX,tietuku.com,DIRECT
 HOST-SUFFIX,tmall.com,DIRECT
 HOST-SUFFIX,tmzvps.com,DIRECT
-HOST-SUFFIX,tonymacx86.com,DIRECT
 HOST-SUFFIX,trello.com,DIRECT
 HOST-SUFFIX,trellocdn.com,DIRECT
 HOST-SUFFIX,totheglory.im,DIRECT
-HOST-SUFFIX,tp.m-team.cc,DIRECT
 HOST-SUFFIX,ttmeiju.com,DIRECT
 HOST-SUFFIX,tudou.com,DIRECT
 HOST-SUFFIX,udache.com,DIRECT
+HOST-SUFFIX,umeng.com,DIRECT
 HOST-SUFFIX,umengcloud.com,DIRECT
 HOST-SUFFIX,umetrip.com,DIRECT
 HOST-SUFFIX,upaiyun.com,DIRECT
@@ -9820,6 +9878,7 @@ HOST-SUFFIX,zhihu.com,DIRECT
 HOST-SUFFIX,zhimg.com,DIRECT
 HOST-SUFFIX,zimuzu.tv,DIRECT
 HOST-SUFFIX,zmz002.com,DIRECT
+HOST-SUFFIX,cn,DIRECT
 
 IP-CIDR,1.255.62.0/24,DIRECT,no-resolve
 
