--- a/Clash.yaml
+++ b/Clash.yaml
@@ -1,18 +1,23 @@
-# 2019年10月26日 05:10 UTC/GMT +9
+# 2020年03月01日 20:00 UTC/GMT +8
 
 # 配置文件需要放置在 $HOME/.config/clash/config.yml
 
 # HTTP 代理端口
-port: 8888
+port: 7890
 
 # SOCKS5 代理端口
-socks-port: 8889
+socks-port: 7891
 
 # Linux 和 macOS 的 redir 代理端口 (如需使用此功能，请取消注释)
-# redir-port: 8890
+# redir-port: 7892
 
 # 允许局域网的连接（可用来共享代理）
 allow-lan: false
+# bind-address: "*"
+# 此功能仅在 allow-lan 设置为 true 时生效，支持三种参数：
+# "*"                           绑定所有的 IP 地址
+# 192.168.122.11                绑定一个的 IPv4 地址
+# "[aaaa::a8aa:ff:fe09:57d8]"   绑定一个 IPv6 地址
 
 # 规则模式：Rule（规则） / Global（全局代理）/ Direct（全局直连）
 mode: Rule
@@ -22,32 +27,64 @@ mode: Rule
 log-level: info
 
 # clash 的 RESTful API
-external-controller: 127.0.0.1:6170
+external-controller: 127.0.0.1:9090
 
 # RESTful API 的口令 (可选)
-secret: ""
+# secret: ""
+
+# 实验性功能
+experimental:
+  ignore-resolve-fail: true # 忽略 DNS 解析失败，默认值为 true
 
 # 如需要自定义DNS，请将 “enable” 处的 false 改为 true
 dns:
   enable: false
   ipv6: false
   # listen: 0.0.0.0:53
-  # enhanced-mode: redir-host
+  # enhanced-mode: redir-host # 或 fake-ip
+  # # fake-ip-range: 198.18.0.1/16 # 如果你不知道这个参数的作用，请勿修改
+  # fake-ip-filter: # fake-ip 白名单列表
+  #   - '*.lan'
+  #   - localhost.ptlogin2.qq.com
+  
   nameserver:
-     - 1.2.4.8
-     - 114.114.114.114
-     - 223.5.5.5
-     - tls://dns.rubyfish.cn:853
+    - 1.2.4.8
+    - 114.114.114.114
+    - 223.5.5.5
+    - tls://13800000000.rubyfish.cn:853
+    #- https://13800000000.rubyfish.cn/
      
   fallback: # 与 nameserver 内的服务器列表同时发起请求，当规则符合 GEOIP 在 CN 以外时，fallback 列表内的域名服务器生效。
-     - tls://1.0.0.1:853
-     - tls://dns.google:853
-     - tls://dns.rubyfish.cn:853
+    - tls://1.0.0.1:853
+    - tls://dns.google:853
+    - tls://13800000000.rubyfish.cn:853
 
-# clash DNS 请求逻辑：
-# (1) 当访问一个域名时， nameserver 与 fallback 列表内的所有服务器并发请求，得到域名对应的 IP 地址。
-# (2) clash 将选取 nameserver 列表内，解析最快的结果。
-# (3) 若解析结果中，IP 地址属于国外，那么 clash 将选择 fallback 列表内，解析最快的结果。
+    #- https://13800000000.rubyfish.cn/
+    #- https://cloudflare-dns.com/dns-query
+    #- https://dns.google/dns-query
+
+# 1. clash DNS 请求逻辑：
+#   (1) 当访问一个域名时， nameserver 与 fallback 列表内的所有服务器并发请求，得到域名对应的 IP 地址。
+#   (2) clash 将选取 nameserver 列表内，解析最快的结果。
+#   (3) 若解析结果中，IP 地址属于 国外，那么 clash 将选择 fallback 列表内，解析最快的结果。
+#
+#   因此，我在 nameserver 和 fallback 内都放置了无污染、解析速度较快的国内 DNS 服务器，以达到最快的解析速度。
+#   但是 fallback 列表内服务器会用在解析境外网站，为了结果绝对无污染，我仅保留了支持 DoT/DoH 的两个服务器。
+#
+# 2. clash DNS 配置注意事项：
+#   (1) 如果您为了确保 DNS 解析结果无污染，请仅保留列表内以 tls:// 或 https:// 开头的 DNS 服务器，但是通常对于国内域名没有必要。
+#   (2) 如果您不在乎可能解析到污染的结果，更加追求速度。请将 nameserver 列表的服务器插入至 fallback 列表内，并移除重复项。
+#
+# 3. 关于 DNS over HTTPS (DoH) 和 DNS over TLS (DoT) 的选择：
+#   对于两项技术双方各执一词，而且会无休止的争论，各有利弊。各位请根据具体需求自行选择，但是配置文件内默认启用 DoT，因为目前国内没有封锁或管制。
+#   DoH: 以 https:// 开头的 DNS 服务器。拥有更好的伪装性，且几乎不可能被运营商或网络管理封锁，但查询效率和安全性可能略低。
+#   DoT: 以 tls:// 开头的 DNS 服务器。拥有更高的安全性和查询效率，但端口有可能被管制或封锁。
+#   若要了解更多关于 DoH/DoT 相关技术，请自行查阅规范文档。
+
+fallback-filter:
+geoip: true # 默认
+ipcidr: # 在这个网段内的 IP 地址会被考虑为被污染的 IP
+  - 240.0.0.0/4
 
 # 服务器列表请按照示范格式填写
 # Shadowsocks 支持 aead_aes_128_gcm/aead_aes_192_gcm/aead_aes_256_gcm/aead_chacha20_poly1305/aes-128-ctr/aes-192-ctr/aes-256-ctr/aes-128-cfb/aes-192-cfb/aes-256-cfb/chacha20-ietf/xchacha20/chacha20/rc4-md5/xchacha20-ietf-poly1305 加密格式
@@ -109,7 +146,7 @@ Proxy Group:
   - "us1"
   - "us2"
   url: http://www.gstatic.com/generate_204
-  interval: "600"
+  interval: 300
 - name: Proxy
   type: select
   proxies:
@@ -159,17 +196,22 @@ Proxy Group:
 
 Rule:
 # Apple
+- DOMAIN,api.smoot.apple.cn,Apple
 - DOMAIN,beta.itunes.apple.com,Apple
 - DOMAIN,gs.apple.com,Apple
 - DOMAIN,hls.itunes.apple.com,Apple
 - DOMAIN,itunes.apple.com,Apple
-- DOMAIN-SUFFIX,aaplimg.com,Apple
-- DOMAIN-SUFFIX,akadns.net,Apple
+- DOMAIN-SUFFIX,apple.co,Apple
 - DOMAIN-SUFFIX,apple.com,Apple
+- DOMAIN-SUFFIX,apple.com.cn,Apple
 - DOMAIN-SUFFIX,apple-cloudkit.com,Apple
+- DOMAIN-SUFFIX,appstore.com,Apple
 - DOMAIN-SUFFIX,cdn-apple.com,Apple
+- DOMAIN-SUFFIX,crashlytics.com,Apple
 - DOMAIN-SUFFIX,icloud.com,Apple
 - DOMAIN-SUFFIX,icloud-content.com,Apple
+- DOMAIN-SUFFIX,itunes.com,Apple
+- DOMAIN-SUFFIX,me.com,Apple
 - DOMAIN-SUFFIX,mzstatic.com,Apple
 
 #- DOMAIN,e.crashlytics.com,REJECT //注释此选项有助于大多数App开发者分析崩溃信息；如果您拒绝一切崩溃数据统计、搜集，请取消 # 注释
@@ -183,15 +225,13 @@ Rule:
 # bilibili
 - DOMAIN-KEYWORD,bilibili,CMedia
 - DOMAIN-SUFFIX,acgvideo.com,CMedia
+- DOMAIN-SUFFIX,bilibili.com,CMedia
 - DOMAIN-SUFFIX,hdslb.com,CMedia
-# IQIYI
+# iQiyi
 - DOMAIN-SUFFIX,iqiyi.com,CMedia
 - DOMAIN-SUFFIX,iqiyipic.com,CMedia
 - DOMAIN-SUFFIX,qy.net,CMedia
 - DOMAIN-SUFFIX,71.am,CMedia
-- IP-CIDR,101.227.0.0/16,CMedia
-- IP-CIDR,101.224.0.0/13,CMedia
-- IP-CIDR,119.176.0.0/12,CMedia
 # Kugou & Kuwo
 - DOMAIN-SUFFIX,kugou.com,CMedia
 - DOMAIN-SUFFIX,kuwo.cn,CMedia
@@ -200,13 +240,33 @@ Rule:
 - DOMAIN-SUFFIX,api.mob.app.letv.com,CMedia
 - DOMAIN-SUFFIX,letv.com,CMedia
 # MGTV
+- DOMAIN-SUFFIX,hitv.com,CMedia
 - DOMAIN-SUFFIX,hunantv.com,CMedia
 - DOMAIN-SUFFIX,mgtv.com,CMedia
 # NeteaseMusic
 - DOMAIN-SUFFIX,music.126.net,CMedia
 - DOMAIN-SUFFIX,music.163.com,CMedia
+- IP-CIDR,39.105.63.80/32,CMedia
+- IP-CIDR,45.254.48.1/32,CMedia
+- IP-CIDR,47.100.127.239/32,CMedia
+- IP-CIDR,59.111.160.195/32,CMedia
+- IP-CIDR,59.111.160.197/32,CMedia
+- IP-CIDR,59.111.181.35/32,CMedia
+- IP-CIDR,59.111.181.38/32,CMedia
+- IP-CIDR,59.111.181.60/32,CMedia
+- IP-CIDR,101.71.154.241/32,CMedia
+- IP-CIDR,103.126.92.132/32,CMedia
+- IP-CIDR,103.126.92.133/32,CMedia
+- IP-CIDR,112.13.119.17/32,CMedia
+- IP-CIDR,112.13.122.1/32,CMedia
+- IP-CIDR,115.236.118.33/32,CMedia
+- IP-CIDR,115.236.121.1/32,CMedia
+- IP-CIDR,118.24.63.156/32,CMedia
+- IP-CIDR,193.112.159.225/32,CMedia
+- IP-CIDR,223.252.199.66/32,CMedia
+- IP-CIDR,223.252.199.67/32,CMedia
 # QQMusic
-- DOMAIN-SUFFIX,music.qq.com,CMedia
+- DOMAIN-SUFFIX,*music.qq.com,CMedia
 - DOMAIN-SUFFIX,y.qq.com,CMedia
 - DOMAIN,aqqmusic.tc.qq.com,CMedia
 # Tencent Video
@@ -219,7 +279,6 @@ Rule:
 - DOMAIN-SUFFIX,soku.com,CMedia
 - DOMAIN-SUFFIX,youku.com,CMedia
 - DOMAIN-SUFFIX,ykimg.com,CMedia
-- IP-CIDR,106.11.0.0/16,CMedia
 
 # Global Media（国际媒体）
 - DOMAIN-SUFFIX,edgedatg.com,GMedia
@@ -243,6 +302,16 @@ Rule:
 - DOMAIN-SUFFIX,bbci.co,GMedia
 - DOMAIN-SUFFIX,bbci.co.uk,GMedia
 - DOMAIN-SUFFIX,chocotv.com.tw,GMedia
+- DOMAIN-SUFFIX,disneyplus.com,GMedia
+- DOMAIN-SUFFIX,disney-plus.net,GMedia
+- DOMAIN-SUFFIX,dssott.com,GMedia
+- DOMAIN-SUFFIX,bamgrid.com,GMedia
+- DOMAIN-SUFFIX,execute-api.us-east-1.amazonaws.com,GMedia
+- DOMAIN,cdn.registerdisney.go.com,GMedia
+- DOMAIN,bcbolthboa-a.akamaihd.net,GMedia
+- DOMAIN-KEYWORD,nowe,GMedia
+- DOMAIN-SUFFIX,nowe.com,GMedia
+- DOMAIN-SUFFIX,youboranqs01.com,GMedia
 - DOMAIN-KEYWORD,epicgames,GMedia
 - DOMAIN-SUFFIX,helpshift.com,GMedia
 - DOMAIN-KEYWORD,foxplus,GMedia
@@ -257,22 +326,35 @@ Rule:
 - DOMAIN-SUFFIX,mstage.io,GMedia
 - DOMAIN-SUFFIX,now.com,GMedia
 - DOMAIN-SUFFIX,theplatform.com,GMedia
+- DOMAIN-SUFFIX,urlload.net,GMedia
+- DOMAIN-SUFFIX,execute-api.ap-southeast-1.amazonaws.com,GMedia
 - DOMAIN-SUFFIX,hbo.com,GMedia
+- DOMAIN-SUFFIX,hboasia.com,GMedia
 - DOMAIN-SUFFIX,hbogo.com,GMedia
+- DOMAIN-SUFFIX,hbogoasia.com,GMedia
 - DOMAIN-SUFFIX,hbogoasia.hk,GMedia
 - DOMAIN-SUFFIX,happyon.jp,GMedia
 - DOMAIN-SUFFIX,hulu.com,GMedia
+- DOMAIN-SUFFIX,hulu.jp,GMedia
 - DOMAIN-SUFFIX,huluim.com,GMedia
+- DOMAIN-SUFFIX,hulustream.com,GMedia
 - DOMAIN-SUFFIX,imkan.tv,GMedia
 - DOMAIN-SUFFIX,joox.com,GMedia
 - DOMAIN-KEYWORD,nowtv100,GMedia
 - DOMAIN-KEYWORD,rthklive,GMedia
 - DOMAIN-SUFFIX,mytvsuper.com,GMedia
 - DOMAIN-SUFFIX,tvb.com,GMedia
-- DOMAIN-KEYWORD,spotify,GMedia
+- DOMAIN-SUFFIX,pandora.com,GMedia
+- DOMAIN-SUFFIX,sky.com,GMedia
+- DOMAIN-SUFFIX,skygo.co.nz,GMedia
+- DOMAIN-SUFFIX,pscdn.co,GMedia
 - DOMAIN-SUFFIX,scdn.co,GMedia
 - DOMAIN-SUFFIX,spoti.fi,GMedia
+- DOMAIN-SUFFIX,spotify.com,GMedia
+- DOMAIN-SUFFIX,cloudfront.net,GMedia
+- DOMAIN-SUFFIX,viu.com,GMedia
 - DOMAIN-SUFFIX,viu.tv,GMedia
+- DOMAIN-SUFFIX,viu.now.com,GMedia
 
 # Netflix
 - DOMAIN-SUFFIX,netflix.com,Netflix
@@ -299,6 +381,31 @@ Rule:
 - DOMAIN-SUFFIX,youtu.be,YouTube
 - DOMAIN,youtubei.googleapis.com,YouTube
 
+# 常见广告拦截
+- DOMAIN-KEYWORD,admarvel,REJECT
+- DOMAIN-KEYWORD,admaster,REJECT
+- DOMAIN-KEYWORD,adsage,REJECT
+- DOMAIN-KEYWORD,adsmogo,REJECT
+- DOMAIN-KEYWORD,adsrvmedia,REJECT
+- DOMAIN-KEYWORD,adwords,REJECT
+- DOMAIN-KEYWORD,adservice,REJECT
+- DOMAIN-KEYWORD,domob,REJECT
+- DOMAIN-KEYWORD,duomeng,REJECT
+- DOMAIN-KEYWORD,dwtrack,REJECT
+- DOMAIN-KEYWORD,guanggao,REJECT
+- DOMAIN-KEYWORD,lianmeng,REJECT
+- DOMAIN-SUFFIX,mmstat.com,REJECT
+- DOMAIN-KEYWORD,omgmta,REJECT
+- DOMAIN-KEYWORD,openx,REJECT
+- DOMAIN-KEYWORD,partnerad,REJECT
+- DOMAIN-KEYWORD,pingfore,REJECT
+- DOMAIN-KEYWORD,supersonicads,REJECT
+- DOMAIN-KEYWORD,uedas,REJECT
+- DOMAIN-KEYWORD,umeng,REJECT
+- DOMAIN-KEYWORD,usage,REJECT
+- DOMAIN-KEYWORD,wlmonitor,REJECT
+- DOMAIN-KEYWORD,zjtoolbar,REJECT
+
 # Domestic（中国网站）
 - DOMAIN-SUFFIX,cn,Domestic
 - DOMAIN-KEYWORD,-cn,Domestic
@@ -309,7 +416,6 @@ Rule:
 - DOMAIN-SUFFIX,360buyimg.com,Domestic
 - DOMAIN-SUFFIX,36kr.com,Domestic
 - DOMAIN-SUFFIX,air-matters.com,Domestic
-- DOMAIN-SUFFIX,akamaized.net,Domestic
 - DOMAIN-KEYWORD,alicdn,Domestic
 - DOMAIN-KEYWORD,alipay,Domestic
 - DOMAIN-KEYWORD,taobao,Domestic
@@ -338,7 +444,6 @@ Rule:
 - DOMAIN-SUFFIX,g-cores.com,Domestic
 - DOMAIN-SUFFIX,godic.net,Domestic
 - DOMAIN-SUFFIX,gtimg.com,Domestic
-- DOMAIN-SUFFIX,hiwifi.com,Domestic
 - DOMAIN,cdn.hockeyapp.net,Domestic
 - DOMAIN-SUFFIX,hongxiu.com,Domestic
 - DOMAIN-SUFFIX,hxcdn.net,Domestic
@@ -352,15 +457,22 @@ Rule:
 - DOMAIN-SUFFIX,le.com,Domestic
 - DOMAIN-SUFFIX,lecloud.com,Domestic
 - DOMAIN-SUFFIX,lemicp.com,Domestic
+- DOMAIN-SUFFIX,licdn.com,Domestic
+- DOMAIN-SUFFIX,linkedin.com,Domestic
 - DOMAIN-SUFFIX,luoo.net,Domestic
 - DOMAIN-SUFFIX,meituan.com,Domestic
 - DOMAIN-SUFFIX,meituan.net,Domestic
 - DOMAIN-SUFFIX,mi.com,Domestic
 - DOMAIN-SUFFIX,miaopai.com,Domestic
+- DOMAIN-SUFFIX,microsoft.com,Domestic
+- DOMAIN-SUFFIX,microsoftonline.com,Domestic
 - DOMAIN-SUFFIX,miui.com,Domestic
 - DOMAIN-SUFFIX,miwifi.com,Domestic
 - DOMAIN-SUFFIX,mob.com,Domestic
 - DOMAIN-SUFFIX,netease.com,Domestic
+- DOMAIN-SUFFIX,office.com,Domestic
+- DOMAIN-SUFFIX,office365.com,Domestic
+- DOMAIN-KEYWORD,officecdn,Domestic
 - DOMAIN-SUFFIX,oschina.net,Domestic
 - DOMAIN-SUFFIX,ppsimg.com,Domestic
 - DOMAIN-SUFFIX,pstatp.com,Domestic
@@ -368,6 +480,7 @@ Rule:
 - DOMAIN-SUFFIX,qdaily.com,Domestic
 - DOMAIN-SUFFIX,qdmm.com,Domestic
 - DOMAIN-SUFFIX,qhimg.com,Domestic
+- DOMAIN-SUFFIX,qhres.com,Domestic
 - DOMAIN-SUFFIX,qidian.com,Domestic
 - DOMAIN-SUFFIX,qihucdn.com,Domestic
 - DOMAIN-SUFFIX,qiniu.com,Domestic
@@ -376,10 +489,11 @@ Rule:
 - DOMAIN-SUFFIX,qq.com,Domestic
 - DOMAIN-SUFFIX,qqurl.com,Domestic
 - DOMAIN-SUFFIX,rarbg.to,Domestic
-- DOMAIN-SUFFIX,rr.tv,Domestic
 - DOMAIN-SUFFIX,ruguoapp.com,Domestic
 - DOMAIN-SUFFIX,segmentfault.com,Domestic
 - DOMAIN-SUFFIX,sinaapp.com,Domestic
+- DOMAIN-SUFFIX,smzdm.com,Domestic
+- DOMAIN-SUFFIX,snapdrop.net,Domestic
 - DOMAIN-SUFFIX,sogou.com,Domestic
 - DOMAIN-SUFFIX,sogoucdn.com,Domestic
 - DOMAIN-SUFFIX,sohu.com,Domestic
@@ -388,6 +502,7 @@ Rule:
 - DOMAIN-SUFFIX,sspai.com,Domestic
 - DOMAIN-SUFFIX,suning.com,Domestic
 - DOMAIN-SUFFIX,taobao.com,Domestic
+- DOMAIN-SUFFIX,tencent.com,Domestic
 - DOMAIN-SUFFIX,tenpay.com,Domestic
 - DOMAIN-SUFFIX,tianyancha.com,Domestic
 - DOMAIN-SUFFIX,tmall.com,Domestic
@@ -396,6 +511,7 @@ Rule:
 - DOMAIN-SUFFIX,upaiyun.com,Domestic
 - DOMAIN-SUFFIX,upyun.com,Domestic
 - DOMAIN-SUFFIX,veryzhun.com,Domestic
+- DOMAIN-SUFFIX,weather.com,Domestic
 - DOMAIN-SUFFIX,weibo.com,Domestic
 - DOMAIN-SUFFIX,xiaomicp.com,Domestic
 - DOMAIN-SUFFIX,ximalaya.com,Domestic
@@ -410,33 +526,10 @@ Rule:
 - DOMAIN-SUFFIX,zealer.com,Domestic
 - DOMAIN-SUFFIX,zhihu.com,Domestic
 - DOMAIN-SUFFIX,zhimg.com,Domestic
+- DOMAIN-SUFFIX,zimuzu.tv,Domestic
+- DOMAIN-SUFFIX,zoho.com,Domestic
 
-# 常见广告拦截
-- DOMAIN-KEYWORD,admarvel,REJECT
-- DOMAIN-KEYWORD,admaster,REJECT
-- DOMAIN-KEYWORD,adsage,REJECT
-- DOMAIN-KEYWORD,adsmogo,REJECT
-- DOMAIN-KEYWORD,adsrvmedia,REJECT
-- DOMAIN-KEYWORD,adwords,REJECT
-- DOMAIN-KEYWORD,adservice,REJECT
-- DOMAIN-KEYWORD,domob,REJECT
-- DOMAIN-KEYWORD,duomeng,REJECT
-- DOMAIN-KEYWORD,dwtrack,REJECT
-- DOMAIN-KEYWORD,guanggao,REJECT
-- DOMAIN-KEYWORD,lianmeng,REJECT
-- DOMAIN-KEYWORD,omgmta,REJECT
-- DOMAIN-KEYWORD,openx,REJECT
-- DOMAIN-KEYWORD,partnerad,REJECT
-- DOMAIN-KEYWORD,pingfore,REJECT
-- DOMAIN-KEYWORD,supersonicads,REJECT
-- DOMAIN-KEYWORD,tracking,REJECT
-- DOMAIN-KEYWORD,uedas,REJECT
-- DOMAIN-KEYWORD,umeng,REJECT
-- DOMAIN-KEYWORD,usage,REJECT
-- DOMAIN-KEYWORD,wlmonitor,REJECT
-- DOMAIN-KEYWORD,zjtoolbar,REJECT
-
-# 抗 DNS 污染
+# Proxy
 - DOMAIN-KEYWORD,amazon,Proxy
 - DOMAIN-KEYWORD,google,Proxy
 - DOMAIN-KEYWORD,gmail,Proxy
@@ -450,7 +543,6 @@ Rule:
 - DOMAIN-KEYWORD,blogspot,Proxy
 - DOMAIN-KEYWORD,whatsapp,Proxy
 
-# Proxy
 - DOMAIN-SUFFIX,9to5mac.com,Proxy
 - DOMAIN-SUFFIX,abpchina.org,Proxy
 - DOMAIN-SUFFIX,adblockplus.org,Proxy
@@ -499,8 +591,6 @@ Rule:
 - DOMAIN-SUFFIX,cnet.com,Proxy
 - DOMAIN-SUFFIX,cocoapods.org,Proxy
 - DOMAIN-SUFFIX,comodoca.com,Proxy
-- DOMAIN-SUFFIX,content.office.net,Proxy
-- DOMAIN-SUFFIX,cordcloud.com,Proxy
 - DOMAIN-SUFFIX,crashlytics.com,Proxy
 - DOMAIN-SUFFIX,culturedcode.com,Proxy
 - DOMAIN-SUFFIX,d.pr,Proxy
@@ -508,11 +598,9 @@ Rule:
 - DOMAIN-SUFFIX,dayone.me,Proxy
 - DOMAIN-SUFFIX,db.tt,Proxy
 - DOMAIN-SUFFIX,deskconnect.com,Proxy
-- DOMAIN-SUFFIX,digicert.com,Proxy
 - DOMAIN-SUFFIX,disq.us,Proxy
 - DOMAIN-SUFFIX,disqus.com,Proxy
 - DOMAIN-SUFFIX,disquscdn.com,Proxy
-- DOMAIN-SUFFIX,dlercloud.com,Proxy
 - DOMAIN-SUFFIX,dnsimple.com,Proxy
 - DOMAIN-SUFFIX,docker.com,Proxy
 - DOMAIN-SUFFIX,dribbble.com,Proxy
@@ -561,6 +649,7 @@ Rule:
 - DOMAIN-SUFFIX,hockeyapp.net,Proxy
 - DOMAIN-SUFFIX,hotmail.com,Proxy
 - DOMAIN-SUFFIX,icons8.com,Proxy
+- DOMAIN-SUFFIX,ifixit.com,Proxy
 - DOMAIN-SUFFIX,ift.tt,Proxy
 - DOMAIN-SUFFIX,ifttt.com,Proxy
 - DOMAIN-SUFFIX,iherb.com,Proxy
@@ -583,8 +672,6 @@ Rule:
 - DOMAIN-SUFFIX,kat.cr,Proxy
 - DOMAIN-SUFFIX,klip.me,Proxy
 - DOMAIN-SUFFIX,libsyn.com,Proxy
-- DOMAIN-SUFFIX,licdn.com,Proxy
-- DOMAIN-SUFFIX,linkedin.com,Proxy
 - DOMAIN-SUFFIX,linode.com,Proxy
 - DOMAIN-SUFFIX,lithium.com,Proxy
 - DOMAIN-SUFFIX,littlehj.com,Proxy
@@ -613,7 +700,6 @@ Rule:
 - DOMAIN-SUFFIX,nssurge.com,Proxy
 - DOMAIN-SUFFIX,nyt.com,Proxy
 - DOMAIN-SUFFIX,nytimes.com,Proxy
-- DOMAIN-SUFFIX,office365.com,Proxy
 - DOMAIN-SUFFIX,omnigroup.com,Proxy
 - DOMAIN-SUFFIX,onedrive.com,Proxy
 - DOMAIN-SUFFIX,onenote.com,Proxy
@@ -690,9 +776,8 @@ Rule:
 - DOMAIN-SUFFIX,ulyssesapp.com,Proxy
 - DOMAIN-SUFFIX,urchin.com,Proxy
 - DOMAIN-SUFFIX,usertrust.com,Proxy
-- DOMAIN-SUFFIX,v2ex.co,Proxy
-- DOMAIN-SUFFIX,v2ex.com,Proxy
 - DOMAIN-SUFFIX,v.gd,Proxy
+- DOMAIN-SUFFIX,v2ex.com,Proxy
 - DOMAIN-SUFFIX,vimeo.com,Proxy
 - DOMAIN-SUFFIX,vimeocdn.com,Proxy
 - DOMAIN-SUFFIX,vine.co,Proxy
