--- a/Loon/Loon.conf
+++ b/Loon/Loon.conf
@@ -1,6 +1,6 @@
 # 适用于 Loon 2.0+ 版本的配置文件
 # 使用 JS 脚本需要 Loon 版本大于 2.1.0(107)，如不符合请删除 [Script] 所有内容直到 [MITM] 上方（包扩 [Script]）
-# 2020年02月22日 23:00 UTC/GMT +8
+# 2020年03月03日 23:00 UTC/GMT +8
 
 [General]
 skip-proxy = 192.168.0.0/16,172.16.0.0/12,127.0.0.0/8,100.64.0.0/10,17.0.0.0/8,10.0.0.0/8,localhost,*.local,e.crashlynatics.com
@@ -35,18 +35,19 @@ Dler Cloud - KR = NameRegex,Dler Cloud,FilterKey = .*韩国
 Dler Cloud - US = NameRegex,Dler Cloud,FilterKey = .*美国
 
 [Proxy Group]
-# 默认注释 Telegram / Steam / Microsoft / Netease Music 规则及策略，如需使用请取消 # 备注
+# 默认注释 Netflix / Spotify / YouTube / Telegram / Microsoft 规则及策略，如需使用请取消 # 备注
 AdBlock = select,Reject,Direct
 Proxy = select,Auto,China,Hong Kong,Taiwan,Singapore,Japan,Korea,United States,Dler Cloud
 Domestic = select,Direct,China
 Apple = select,Direct,Proxy
 AsianTV = select,Domestic,China,Hong Kong,Taiwan
 GlobalTV = select,Proxy,Direct,Hong Kong,Taiwan,Singapore,Japan,Korea,United States
+#Netflix = select,GlobalTV,Proxy,Direct
+#Spotify = select,GlobalTV,Proxy,Direct
+#YouTube = select,GlobalTV,Proxy,Direct
 #Telegram = select,Proxy,Singapore,United States,Hong Kong
-#Steam = select,Proxy,Direct,Dler Cloud
-Speedtest = select,Proxy,Direct,Dler Cloud
 #Microsoft = select,Direct,Proxy
-#Netease Music = select,Direct,Domestic
+Speedtest = select,Proxy,Direct,Dler Cloud
 Others = select,Proxy,Direct
 
 # 注意下方的 Dler Cloud 名称，如有不使用的国家/地区节点策略组，请在上方规则策略组中一并删除相关节点策略组
@@ -86,13 +87,14 @@ FINAL,Others
 
 [Remote Rule]
 # 订阅规则、策略
-# 默认注释 Telegram / Steam / Microsoft / Netease Music 规则及策略，如需使用请取消 # 备注
+# 默认注释 Telegram / Microsoft / Netease Music 规则及策略，如需使用请取消 # 备注
 https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Reject.list,AdBlock
 https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Apple.list,Apple
-https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/AsianTV.list,AsianTV
+https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Spotify.list,🎵Spotify
+https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/AsianTV.list,📺AsianTV
+#https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Spotify.list,🎵Spotify
 https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/GlobalTV.list,GlobalTV
 #https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Telegram.list,Telegram
-#https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Steam.list,Steam
 https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Speedtest.list,Speedtest
 #https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Microsoft.list,Microsoft
 #https://raw.githubusercontent.com/lhie1/Rules/master/Surge/Surge%203/Provider/Netease%20Music.list,Netease Music
