完善Loon配置文件/添加远程重写文件

--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -1,6 +1,6 @@
 # 该文件基于 Quantumult X 1.0.5 正式版制作。
 #
-# 2020年03月01日 22:00 UTC/GMT +8
+# 2020年03月02日 16:50 UTC/GMT +8
 #
 # Quantumult 使用 HTTP HEAD 方法对测试网址（server_check_url）进行网页响应性测试（测试结果为通过该节点访问此网页获得响应所需要的时间），来确认节点的可用性。
 # Quantumult 界面中的延迟测试方式均为网页响应性测试，显示的最终延迟均为通过对应节点访问测试网页获得响应所需要时间。
@@ -79,32 +79,28 @@ https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/GMedia.
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Speedtest.list, tag=Speedtest (Stick Rules), enabled=true
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Outside.list, tag=Outside (Stick Rules), enabled=true
 https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Mainland.list, tag=Mainland (Stick Rules), enabled=true
+https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Filter/Mainland.list, tag=LAN (Stick Rules), enabled=true
 
 [rewrite_remote]
-https://raw.githubusercontent.com/ConnersHua/Profiles/master/Quantumult/X/Rewrite.conf, tag=Rewrite (ConnersHua), enabled=true
+https://raw.githubusercontent.com/GeQ1an/Rules/master/QuantumultX/Rewrite/Rewrite.list, tag=Rewrite (Stick Rules), enabled=true
 
 [server_local]
 
 
 [filter_local]
-host-suffix, local, direct
-ip-cidr, 10.0.0.0/8, direct
-ip-cidr, 17.0.0.0/8, direct
-ip-cidr, 100.64.0.0/10, direct
-ip-cidr, 127.0.0.0/8, direct
-ip-cidr, 172.16.0.0/12, direct
-ip-cidr, 192.168.0.0/16, direct
-geoip, cn, Mainland
 final, Others
 
 [rewrite_local]
-# 解锁 TikTok，非亚洲区域 App Store 下载请将 "8.4.0" 修改为 "14.0.0"
+# 解锁 TikTok
+# 更换 TikTok 区域请修改下方国家代码，默认为韩国 KR
+# 非亚洲区域 App Store 下载的 TikTok 请将 "8.4.0" 修改为 "14.0.0"
 (.*video_id=\w{32})(.*watermark=)(.*) url 302 $1
 (?<=(carrier|account|sys|sim)_region=)CN url 307 KR
 (?<=version_code=)\d{1,}.\d{1}\.\d{1} url 307 8.4.0
 
 [mitm]
-# 请在正式使用前将其他已信任证书的密码及 P12 填入下方，并删掉 passphrase 和 p12 前的分号。或者前往设置界面生成、安装并信任证书
+# 请在正式使用前将其他已信任证书的密码及 P12 填入下方，并删掉 passphrase 和 p12 前的分号
+# 或者前往设置界面生成、安装并信任新证书
 ;passphrase =
 ;p12 =
-hostname = api*.tiktokv.com, api*.musical.ly, api*.amemv.com, aweme*.snssdk.com
+hostname =
