--- a/Loon/Loon.conf
+++ b/Loon/Loon.conf
@@ -1,13 +1,13 @@
 # 适用于 Loon 2.0+ 版本的配置文件
 # 使用 JS 脚本需要 Loon 版本大于 2.1.0(107)，如不符合请删除 [Script] 所有内容直到 [MITM] 上方（包扩 [Script]）
-# 2020年03月02日 16:50 UTC/GMT +8
+# 2020年03月04日 01:37 UTC/GMT +8
 
 [General]
 skip-proxy = 192.168.0.0/16,172.16.0.0/12,127.0.0.0/8,100.64.0.0/10,17.0.0.0/8,10.0.0.0/8,localhost,*.local,e.crashlynatics.com
 bypass-tun = 10.0.0.0/8,100.64.0.0/10,127.0.0.0/8,169.254.0.0/16,172.16.0.0/12,192.0.0.0/24,192.0.2.0/24,192.88.99.0/24,192.168.0.0/16,198.18.0.0/15,198.51.100.0/24,203.0.113.0/24,224.0.0.0/4,255.255.255.255/32
 # [DNS] => DNS 服务器，如果只在中国大陆境内使用，可以删除 1.0.0.1 和 8.8.8.8 两个 DNS（推荐）
 dns-server = system,1.0.0.1,8.8.8.8,114.114.114.114,119.29.29.29,223.5.5.5
-allow-udp-proxy = false
+allow-udp-proxy = true
 host = 127.0.0.1
 
 [Proxy]
