--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -1,4 +1,4 @@
-# 2020年03月03日 15:30 UTC/GMT +8
+# 2020年03月04日 01:37 UTC/GMT +8
 
 #「设置」——「订阅」——「+」——「分流」，输入名字（随意，如"Stick Rules"）
 # 填上链接地址，勾选个性化保存，保存找到选项，左滑选择「替换」，然后「保存」
@@ -1782,7 +1782,6 @@ HOST-SUFFIX,b.ads1.msn.com,REJECT
 HOST-SUFFIX,b.aowugame.com,REJECT
 HOST-SUFFIX,b.babylon.com,REJECT
 HOST-SUFFIX,b.baiy.net,REJECT
-HOST-SUFFIX,b.bdstatic.com,REJECT
 HOST-SUFFIX,b.bst.126.net,REJECT
 HOST-SUFFIX,b.clkservice.youdao.com,REJECT
 HOST-SUFFIX,b.code.tanwanyx.com,REJECT
@@ -8901,6 +8900,7 @@ HOST-SUFFIX,feedburner.com,DIRECT
 HOST-SUFFIX,feedly.com,DIRECT
 HOST-SUFFIX,feedsportal.com,DIRECT
 HOST-SUFFIX,fiftythree.com,DIRECT
+HOST-SUFFIX,figma.com,DIRECT
 HOST-SUFFIX,firebaseio.com,DIRECT
 HOST-SUFFIX,flexibits.com,DIRECT
 HOST-SUFFIX,flickr.com,DIRECT
@@ -9290,6 +9290,7 @@ HOST-SUFFIX,wikipedia.org,DIRECT
 HOST-SUFFIX,wn.com,DIRECT
 HOST-SUFFIX,wordpress.com,DIRECT
 HOST-SUFFIX,workflow.is,DIRECT
+HOST-SUFFIX,workflowy.com,DIRECT
 HOST-SUFFIX,worldcat.org,DIRECT
 HOST-SUFFIX,wow.com,DIRECT
 HOST-SUFFIX,wp.com,DIRECT
@@ -9674,6 +9675,7 @@ HOST-SUFFIX,bthhotels.com,PROXY
 HOST-SUFFIX,caiyunapp.com,PROXY
 HOST-SUFFIX,ccgslb.com,PROXY
 HOST-SUFFIX,ccgslb.net,PROXY
+HOST-SUFFIX,chaoxing.com,PROXY
 HOST-SUFFIX,chinacache.net,PROXY
 HOST-SUFFIX,chinaz.com,PROXY
 HOST-SUFFIX,chunbo.com,PROXY
@@ -9852,7 +9854,6 @@ HOST-SUFFIX,weiphone.net,PROXY
 HOST-SUFFIX,wenku8.net,PROXY
 HOST-SUFFIX,werewolf.53site.com,PROXY
 HOST-SUFFIX,wkcdn.com,PROXY
-HOST-SUFFIX,workflowy.com,PROXY
 HOST-SUFFIX,xdrig.com,PROXY
 HOST-SUFFIX,xhostfire.com,PROXY
 HOST-SUFFIX,xiaojukeji.com,PROXY
