--- a/Quantumult_media_only.conf
+++ b/Quantumult_media_only.conf
@@ -1,4 +1,4 @@
-# 2020年03月03日 15:30 UTC/GMT +8
+# 2020年03月04日 01:37 UTC/GMT +8
 
 #「设置」——「订阅」——「+」——「分流」，输入名字（随意，如"Stick Rules"）
 # 填上链接地址，勾选个性化保存，保存找到选项，左滑选择「替换」，然后「保存」
@@ -1782,7 +1782,6 @@ HOST-SUFFIX,b.ads1.msn.com,REJECT
 HOST-SUFFIX,b.aowugame.com,REJECT
 HOST-SUFFIX,b.babylon.com,REJECT
 HOST-SUFFIX,b.baiy.net,REJECT
-HOST-SUFFIX,b.bdstatic.com,REJECT
 HOST-SUFFIX,b.bst.126.net,REJECT
 HOST-SUFFIX,b.clkservice.youdao.com,REJECT
 HOST-SUFFIX,b.code.tanwanyx.com,REJECT
@@ -8867,6 +8866,7 @@ HOST-SUFFIX,feedburner.com,DIRECT
 HOST-SUFFIX,feedly.com,DIRECT
 HOST-SUFFIX,feedsportal.com,DIRECT
 HOST-SUFFIX,fiftythree.com,DIRECT
+HOST-SUFFIX,figma.com,DIRECT
 HOST-SUFFIX,firebaseio.com,DIRECT
 HOST-SUFFIX,flexibits.com,DIRECT
 HOST-SUFFIX,flickr.com,DIRECT
@@ -9258,6 +9258,7 @@ HOST-SUFFIX,wikipedia.org,DIRECT
 HOST-SUFFIX,wn.com,DIRECT
 HOST-SUFFIX,wordpress.com,DIRECT
 HOST-SUFFIX,workflow.is,DIRECT
+HOST-SUFFIX,workflowy.com,DIRECT
 HOST-SUFFIX,worldcat.org,DIRECT
 HOST-SUFFIX,wow.com,DIRECT
 HOST-SUFFIX,wp.com,DIRECT
@@ -9662,6 +9663,7 @@ HOST-SUFFIX,bthhotels.com,DIRECT
 HOST-SUFFIX,caiyunapp.com,DIRECT
 HOST-SUFFIX,ccgslb.com,DIRECT
 HOST-SUFFIX,ccgslb.net,DIRECT
+HOST-SUFFIX,chaoxing.com,DIRECT
 HOST-SUFFIX,chinacache.net,DIRECT
 HOST-SUFFIX,chinaz.com,DIRECT
 HOST-SUFFIX,chunbo.com,DIRECT
@@ -9840,7 +9842,6 @@ HOST-SUFFIX,weiphone.net,DIRECT
 HOST-SUFFIX,wenku8.net,DIRECT
 HOST-SUFFIX,werewolf.53site.com,DIRECT
 HOST-SUFFIX,wkcdn.com,DIRECT
-HOST-SUFFIX,workflowy.com,DIRECT
 HOST-SUFFIX,xdrig.com,DIRECT
 HOST-SUFFIX,xhostfire.com,DIRECT
 HOST-SUFFIX,xiaojukeji.com,DIRECT
