--- a/Quantumult.conf
+++ b/Quantumult.conf
@@ -1,4 +1,4 @@
-# 2020年03月04日 01:37 UTC/GMT +8
+# 2020年03月07日 16:45 UTC/GMT +8
 
 #「设置」——「订阅」——「+」——「分流」，输入名字（随意，如"Stick Rules"）
 # 填上链接地址，勾选个性化保存，保存找到选项，左滑选择「替换」，然后「保存」
@@ -1589,7 +1589,6 @@ HOST-SUFFIX,api.iimedia.cn,REJECT
 HOST-SUFFIX,api.ijunhai.com,REJECT
 HOST-SUFFIX,api.itaoxiaoshuo.com,REJECT
 HOST-SUFFIX,api.joybj.com,REJECT
-HOST-SUFFIX,api.jr.mi.com,REJECT
 HOST-SUFFIX,api.ketedata.com,REJECT
 HOST-SUFFIX,api.koudaikj.com,REJECT
 HOST-SUFFIX,api.leadbolt.net,REJECT
@@ -9588,33 +9587,6 @@ HOST-SUFFIX,battle.net,PROXY
 HOST-SUFFIX,battlenet.com,PROXY
 HOST-SUFFIX,blizzard.com,PROXY
 
-# > Microsoft
-USER-AGENT,Microsoft*,PROXY
-HOST-KEYWORD,microsoft,PROXY
-HOST-SUFFIX,ms,PROXY
-HOST-SUFFIX,bing.com,PROXY
-HOST-SUFFIX,bing.net,PROXY
-HOST-SUFFIX,hotmail.com,PROXY
-HOST-SUFFIX,live.com,PROXY
-HOST-SUFFIX,live.net,PROXY
-HOST-SUFFIX,microsofttranslator.com,PROXY
-HOST-SUFFIX,msauth.net,PROXY
-HOST-SUFFIX,msecnd.net,PROXY
-HOST-SUFFIX,msocdn.com,PROXY
-HOST-SUFFIX,msedge.net,PROXY
-HOST-SUFFIX,msn.com,PROXY
-HOST-SUFFIX,office.com,PROXY
-HOST-SUFFIX,office.net,PROXY
-HOST-SUFFIX,office365.com,PROXY
-HOST-SUFFIX,onenote.com,PROXY
-HOST-SUFFIX,onenote.net,PROXY
-HOST-SUFFIX,outlook.com,PROXY
-HOST-SUFFIX,visualstudio.com,PROXY
-HOST-SUFFIX,windows.com,PROXY
-HOST-SUFFIX,windows.net,PROXY
-HOST-SUFFIX,xbox.com,PROXY
-HOST-SUFFIX,xboxlive.com,PROXY
-
 # > Prior
 HOST,client.amplifi.com,PROXY
 HOST-SUFFIX,alphassl.com,PROXY
@@ -9651,6 +9623,7 @@ HOST-SUFFIX,air-matters.io,PROXY
 HOST-SUFFIX,airhotels.cn,PROXY
 HOST-SUFFIX,akadns.net,PROXY
 HOST-SUFFIX,aliapp.org,PROXY
+HOST-SUFFIX,alibaba.com,PROXY
 HOST-SUFFIX,alibabacloud.com,PROXY
 HOST-SUFFIX,alicdn.com,PROXY
 HOST-SUFFIX,alipay.com,PROXY
