--- a/Quantumult_media_only.conf
+++ b/Quantumult_media_only.conf
@@ -1,4 +1,4 @@
-# 2020年03月04日 01:37 UTC/GMT +8
+# 2020年03月07日 16:45 UTC/GMT +8
 
 #「设置」——「订阅」——「+」——「分流」，输入名字（随意，如"Stick Rules"）
 # 填上链接地址，勾选个性化保存，保存找到选项，左滑选择「替换」，然后「保存」
@@ -1589,7 +1589,6 @@ HOST-SUFFIX,api.iimedia.cn,REJECT
 HOST-SUFFIX,api.ijunhai.com,REJECT
 HOST-SUFFIX,api.itaoxiaoshuo.com,REJECT
 HOST-SUFFIX,api.joybj.com,REJECT
-HOST-SUFFIX,api.jr.mi.com,REJECT
 HOST-SUFFIX,api.ketedata.com,REJECT
 HOST-SUFFIX,api.koudaikj.com,REJECT
 HOST-SUFFIX,api.leadbolt.net,REJECT
@@ -9576,33 +9575,6 @@ HOST-SUFFIX,battle.net,DIRECT
 HOST-SUFFIX,battlenet.com,DIRECT
 HOST-SUFFIX,blizzard.com,DIRECT
 
-# > Microsoft
-USER-AGENT,Microsoft*,DIRECT
-HOST-KEYWORD,microsoft,DIRECT
-HOST-SUFFIX,ms,DIRECT
-HOST-SUFFIX,bing.com,DIRECT
-HOST-SUFFIX,bing.net,DIRECT
-HOST-SUFFIX,hotmail.com,DIRECT
-HOST-SUFFIX,live.com,DIRECT
-HOST-SUFFIX,live.net,DIRECT
-HOST-SUFFIX,microsofttranslator.com,DIRECT
-HOST-SUFFIX,msauth.net,DIRECT
-HOST-SUFFIX,msecnd.net,DIRECT
-HOST-SUFFIX,msocdn.com,DIRECT
-HOST-SUFFIX,msedge.net,DIRECT
-HOST-SUFFIX,msn.com,DIRECT
-HOST-SUFFIX,office.com,DIRECT
-HOST-SUFFIX,office.net,DIRECT
-HOST-SUFFIX,office365.com,DIRECT
-HOST-SUFFIX,onenote.com,DIRECT
-HOST-SUFFIX,onenote.net,DIRECT
-HOST-SUFFIX,outlook.com,DIRECT
-HOST-SUFFIX,visualstudio.com,DIRECT
-HOST-SUFFIX,windows.com,DIRECT
-HOST-SUFFIX,windows.net,DIRECT
-HOST-SUFFIX,xbox.com,DIRECT
-HOST-SUFFIX,xboxlive.com,DIRECT
-
 # > Prior
 HOST,client.amplifi.com,DIRECT
 HOST-SUFFIX,alphassl.com,DIRECT
@@ -9639,6 +9611,7 @@ HOST-SUFFIX,air-matters.io,DIRECT
 HOST-SUFFIX,airhotels.cn,DIRECT
 HOST-SUFFIX,akadns.net,DIRECT
 HOST-SUFFIX,aliapp.org,DIRECT
+HOST-SUFFIX,alibaba.com,DIRECT
 HOST-SUFFIX,alibabacloud.com,DIRECT
 HOST-SUFFIX,alicdn.com,DIRECT
 HOST-SUFFIX,alipay.com,DIRECT
